c/examples/writing-a-c-compiler-tests/tests/chapter_6/valid/ternary.c
int main(void) {
    int a = 0;
    return a > -1 ? 4 : 5;
}