c/examples/writing-a-c-compiler-tests/tests/chapter_6/invalid_semantics/undeclared_var_in_ternary.c
int main(void) {
    return a > 0 ? 1 : 2;
    int a = 5;
}